Fix right-tab visibility and timed-fades status freshness
Amp-Thread-ID: https://ampcode.com/threads/T-019e3b78-7164-77ea-91a3-c388e326e3ac

--- a/player.css
+++ b/player.css
@@ -1093,6 +1093,10 @@ td:last-child {
   border-bottom: 1px solid #3d3d5c;
 }
 
+#rightTabBar[hidden] {
+  display: none !important;
+}
+
 .right-tab {
   display: flex;
   align-items: center;
@@ -1126,7 +1130,7 @@ td:last-child {
   margin-bottom: 4px;
 }
 
-#rightTabBar:not([style*="none"]) ~ #playHistory .history-header {
+#rightTabBar:not([hidden]) ~ #playHistory .history-header {
   display: none;
 }
 
